--- a/backend/NoviVovi.Application/NoviVovi.Application.csproj
+++ b/backend/NoviVovi.Application/NoviVovi.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NoviVovi.Domain\NoviVovi.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
