--- a/backend/NoviVovi.Infrastructure/NoviVovi.Infrastructure.csproj
+++ b/backend/NoviVovi.Infrastructure/NoviVovi.Infrastructure.csproj
@@ -10,4 +10,13 @@
     <Folder Include="Persistence\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NoviVovi.Application\NoviVovi.Application.csproj" />
+    <ProjectReference Include="..\NoviVovi.Domain\NoviVovi.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
